syntax = "proto3";
package users;

option go_package = "./pkg/pb";

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

// Register
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string confirm_password = 4;
}

message RegisterResponse {
  int32 status = 1;
  string error = 2;
}

// Login
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  string error = 2;
  string token = 3;
  User user = 4;
}

// Validate
message ValidateRequest { string token = 1; }

message ValidateResponse {
  int32 status = 1;
  string error = 2;
  int32 user_id = 3;
}

// Edit profile
message UpdateProfileRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UpdateProfileResponse {
  int32 status = 1;
  string error = 2;
}

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
}